syntax = "proto3";

package ch4;

option java_package = "uk.me.uohiro.protobuf.model.ch4";
option java_outer_classname = "StarFriendsAPIProto";
option java_multiple_files = true;
option optimize_for = SPEED;

import "google/protobuf/timestamp.proto";

service StarFriends {
	rpc GetFilm(GetFilmRequest) returns (GetFilmResponse);
	rpc ListFilms(ListFilmsRequest) returns (ListFilmsResponse);
}

message GetFilmRequest {
	string id = 1;
}

message GetFilmResponse {
	Film film = 1;
}

message ListFilmsRequest {
}

message ListFilmsResponse {
	repeated Film films = 1;
}

message Film {
	string id = 1;
	string title = 2;
	string director = 3;
	string producer = 4;
	google.protobuf.Timestamp release_date = 5;
}
